--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SDD130 Home Page</title>
+    <title>WDD130 Home Page</title>
 </head>
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
@@ -16,5 +16,6 @@
     <a href="#">Personal Website</a>
     <a href="#">Personal Siteplan</a>
     </nav>
+    <p>Skye Roberts - WDD130</p>
 </body>
 </html>
