validated code, fixed errors

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,9 +3,9 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 
 <body>
@@ -13,9 +13,10 @@
     <h1>Red Rock Rafting Site Plan</h1>
     <h2>Skye Roberts</h2>
     <h2>WDD 130-11</h2>
+  </header>
   <main>
 
-    <hr />
+    <hr>
     <h2>Overview</h2>
     <h3>Purpose</h3>
     <p>Helping young adults gain their confidence and self-esteem by becoming rafters.</p>
@@ -24,11 +25,11 @@
     <p>Those between the ages of 18-30 are at a prime time to establish their personality, to determine their wants and needs. Falling into pits of self-consciousness stop progression from happening, because you are focusing on others thoughts instead of your own. While white water rafting, it is impossible to be worried about anything outside of the waves - you are completely focused on the present moment. Our goal is to make that habit a mindset for you - and to use it to meet your own potential. <br>Our website will be accessed mostly through mobile devices, although it may be accessed on desktop or laptop as well.
     </p>
 
-    <hr />
+    <hr>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <img src="images/red_rock.png" alt="Logo image" />
-    <hr />
+    <img src="images/red_rock.png" alt="Logo image">
+    <hr>
     <h2>Style Guide</h2>
 
     <h3>Color Palette</h3>
@@ -82,7 +83,7 @@
       <a href="#">Page2</a>
       <a href="#">Contact Us</a>
     </nav>
-    <hr />
+    <hr>
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
@@ -96,13 +97,13 @@
       <div class="left">&nbsp;</div>
       <div class="right">&nbsp;</div>
     </div>
-    <hr />
+    <hr>
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe">
 
     <h3>[Page 2]</h3>
 
