--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Rock Rafting | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body><div id="content">
     <header>
         <a href="index.html" id="logo_link"><img src="images/logo.png" class="logo" alt="Red Rock Rafting Logo"></a>
         <nav>
@@ -44,6 +45,7 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More than just the thrill</h2>
@@ -56,16 +58,16 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
-    </footer>
+    </footer></div>
 </body>
 </html>
