--- a/wwr/index.html
+++ b/wwr/index.html
@@ -24,7 +24,7 @@
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Red Rock Rafting</h4>
-            <div>
+            <div id="book">
                 <a class="book" href="contactus.html">Book Now</a>
             </div>
         </section>
