--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 </head>
 <body><div id="content">
     <header>
-        <a href="index.html" id="logo_link"><img src="images/logo.png" class="logo" alt="Red Rock Rafting Logo"></a>
+        <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="Red Rock Rafting Logo"></a>
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
@@ -22,9 +22,9 @@
             <img src="images/hero.png" id="hero-img" alt="People enjoying rafting">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
+            <h1 class="home-title">Have an Adventure</h1>
             <h4>Make Memories with Red Rock Rafting</h4>
-            <div id="book">
+            <div class="button-box">
                 <a class="book" href="contactus.html">Book Now</a>
             </div>
         </section>
