--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -80,17 +80,14 @@
     <h3>Navigation</h3>
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">Rates & Dates</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr>
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        [Page2]
-        <!-- this page will have a name later -->
-      </div>
+      <div class="sm-page2">Rates & Dates</div>
       <div class="sm-page3">Contact Us</div>
 
       <div class="top">&nbsp;</div>
@@ -105,9 +102,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe">
 
-    <h3>[Page 2]</h3>
+    <h3>Rates & Dates</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/Page-2-wireframe.png" alt="page 2 wireframe">
   </main>
 </body>
 
