updated site plan

--- a/green-machine/site-plan.html
+++ b/green-machine/site-plan.html
@@ -62,10 +62,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Lato  <!-- change this -->
+        Heading Font: Lato
       </h4>
       <h4>
-        Paragraph Font: Josefin Sans  <!-- change this -->
+        Paragraph Font: Josefin Sans
       </h4>
       <h3>
         Normal paragraph example
@@ -125,29 +125,75 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+      Our Story
+      <br><br>The Roberts family founded Green Machine in 2023, after being faced with a rarity of healthy food options in their town.  The company’s main purpose is to change lives and communities from the inside out – by feeding soul as well as the body. We strive to connect people to others in their community through group cooking classes and shared seating options, and to connect people to themselves by helping them feel better and more energized through healthy, local food.
+      <br><br>Our Philosophy
+      <br><br>Sweeten with Fruit
+      <br>No refined sugars
+      <br>We’ve found that fruits are the perfect alternative to refined sugars. We will always sweeten with fruit first, and occasionally we’ll supplement with natural sweeteners like monk fruit and stevia.
+      <br><br>Focus on the Nutrients
+      <br>No more calorie counting
+      <br>We strive to shift the focus in familiar diets from calorie-counting to nutrient consciousness. Calories are just one attribute of food. Nutrients involve so much more.
+      <br><br>Made from Scratch
+      <br>Every day with love
+      <br>Everything we serve is made from scratch, with love, everyday. This way, we don’t need to rely on canned food or added preservatives. You know exactly what you’re getting.
+
       </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+      <p>Images for the Home page </p>
+        <img src="images/bread.jpg" alt="image for homepage">
+        <img src="images/bw-family.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Menu</h3>
       <p>
-        [Written copy for the Page 2 here]
+      Protein Berry Smoothie Bowl
+      <br>o	GF, V
+      <br>o	Ingredients: Banana, Berries, Milk (your choice of almond, cashew, coconut), Almond Butter, Dates, Avocado, Hemp Seeds
+      <br><br>Wild Salmon Bowl
+      <br>o	DF, GF
+      <br>o	Green Beans, Choice of Base (Quinoa, Rice, Kale, Spring Greens, Cabbage), Grape Tomatoes, Lime Tomato Vinaigrette, Seasonings, Spicy Cashew Dressing, Hummus, Wild Salmon
+      <br><br>Benedict Burger
+      <br>o	Whole Wheat Ciabatta Bun, Cheese, Housemade Burger Patty, Hollandaise Sauce, Egg, Sliced Ham, Seasonings
+      <br><br>Raspberry Almond Cake
+      <br>o	Almond Cake, Pastry Cream, Raspberries
+      <br><br>Berry Cheesecake
+      <br>o	GF
+      <br>o	Graham Cracker Crust, Vanilla Cheesecake, Berries
+      <br><br>Etc...
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Images for Page 2 (Menu)</p>
+        <img src="images/smoothie.jpg" alt="image for page">
+        <img src="images/bowl.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
-      <p>
-        [Written copy for the Page 3 here]
+      <h3>Cooking Classes</h3>
+      <p>We believe that good food and good conversations heal the soul, which is why we began our cooking classes. These classes provide an opportunity for the community to spend time learning and growing together, to meet their neighbors and bring their families with them. Come hungry, we always eat what we make as a group.
+      <br><br>Empty Nesters 
+      <br>o	What: Recipes and storage tips for cooking for two
+      <br>o	When: 1st and 3rd Wednesday 11am
+      <br>o	Cost: $30 per person (includes all ingredients)
+      <br><br>Brunches and Beyond
+      <br>o	What: Learn the art of the perfect brunch – learn simple, healthy breakfast and lunch recipes that will always impress a crowd.
+      <br>o	When: 1st and 3rd Saturday 9am
+      <br>o	Cost: $30 per person (includes all ingredients)
+      <br><br>(Double) Date Night
+      <br>o	What: Reserve ahead of time, room for 4 guests only. Experience cooking in a restaurant kitchen, learn how the chefs are making the special dish for that night’s menu, and prepare your own meal alongside them.
+      <br>o	When: 2nd and 4th Friday 6pm
+      <br>o	Cost: $75 per person (includes all ingredients)
+      <br><br>Community Cooking
+      <br>o	What: Learn budget-friendly recipes that you can size up to feed any amount of people. Walk-in’s welcome, we aim to gather the whole community!
+      <br>o	When: 1st Monday 5:30pm
+      <br>o	Cost: $15/adult $10/child (includes all ingredients)
+      <br><br>Summer Camps
+      <br>We run a series of summer camps for ages 7-17, contact us for the specifics!
+      <br><br>Private Classes
+      <br>Want to prepare a special dinner for someone, uncomfortable in group settings, or have specific cooking skills/recipes you want to learn? Contact us to set up private cooking lessons!
+      <br>o	Cost: $25/hr, ingredient pricing varies depending on chosen recipes
+
       </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for Page 3 (Cooking Classes)</p>
+        <img src="images/pizza.jpg" alt="image for page3" width=50%>
+        <img src="images/family.jpg" alt="image for page3" width=50%>
 
       </ul>
       <hr>
@@ -157,19 +203,19 @@
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Home</h3>
+      <h3>Home Page</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Menu</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Cooking Classes</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
