--- a/green-machine/site-plan.html
+++ b/green-machine/site-plan.html
@@ -192,9 +192,8 @@
 
       </p>
       <p>Images for Page 3 (Cooking Classes)</p>
-        <img src="images/pizza.jpg" alt="image for page3" width=50%>
-        <img src="images/family.jpg" alt="image for page3" width=50%>
-
+        <img src="images/pizza.jpg" alt="image for page3">
+        <img src="images/family.jpg" alt="image for page3">
       </ul>
       <hr>
       <h2>
