--- a/green-machine/site-plan.html
+++ b/green-machine/site-plan.html
@@ -140,8 +140,8 @@
 
       </p>
       <p>Images for the Home page </p>
-        <img src="images/bread.jpg" alt="image for homepage">
-        <img src="images/bw-family.jpg" alt="image for homepage">
+        <img src="images/bread.jpg" alt="image for homepage" class="photo">
+        <img src="images/bw-family.jpg" alt="image for homepage" class="photo">
 
       </ul>
       <h3>Menu</h3>
@@ -162,8 +162,8 @@
       <br><br>Etc...
       </p>
       <p>Images for Page 2 (Menu)</p>
-        <img src="images/smoothie.jpg" alt="image for page">
-        <img src="images/bowl.jpg" alt="image for page">
+        <img src="images/smoothie.jpg" alt="image for page" class="photo">
+        <img src="images/bowl.jpg" alt="image for page" class="photo">
 
       </ul>
       <h3>Cooking Classes</h3>
@@ -192,8 +192,8 @@
 
       </p>
       <p>Images for Page 3 (Cooking Classes)</p>
-        <img src="images/pizza.jpg" alt="image for page3">
-        <img src="images/family.jpg" alt="image for page3">
+        <img src="images/pizza.jpg" alt="image for page3" class="photo">
+        <img src="images/family.jpg" alt="image for page3" class="photo">
       </ul>
       <hr>
       <h2>
