--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Rock Rafting | Home</title>
+    <title>Home | Red Rock Rafting</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body><div id="content">
@@ -12,7 +12,7 @@
         <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="Red Rock Rafting Logo"></a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="rates.html">Rates & Dates</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
