--- a/green-machine/site-plan.html
+++ b/green-machine/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/logo.png" alt="Logo image">
+      <img src="images/logo.png" alt="Logo image" id="logo">
       <hr>
       <h2>
         Style Guide
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          Menu <!-- change this -->
+          Menu 
         </div>
         <div class="sm-page3">
-          Cooking Classes  <!-- change this -->
+          Cooking Classes 
         </div>
 
         <div class="top">
@@ -168,13 +168,9 @@
       </ul>
       <h3>Cooking Classes</h3>
       <p>We believe that good food and good conversations heal the soul, which is why we began our cooking classes. These classes provide an opportunity for the community to spend time learning and growing together, to meet their neighbors and bring their families with them. Come hungry, we always eat what we make as a group.
-      <br><br>Empty Nesters 
-      <br>o	What: Recipes and storage tips for cooking for two
-      <br>o	When: 1st and 3rd Wednesday 11am
-      <br>o	Cost: $30 per person (includes all ingredients)
       <br><br>Brunches and Beyond
       <br>o	What: Learn the art of the perfect brunch – learn simple, healthy breakfast and lunch recipes that will always impress a crowd.
-      <br>o	When: 1st and 3rd Saturday 9am
+      <br>o	When: 1st Saturday 9:30am
       <br>o	Cost: $30 per person (includes all ingredients)
       <br><br>(Double) Date Night
       <br>o	What: Reserve ahead of time, room for 4 guests only. Experience cooking in a restaurant kitchen, learn how the chefs are making the special dish for that night’s menu, and prepare your own meal alongside them.
@@ -199,26 +195,14 @@
       <h2>
         Wireframes
       </h2>
-      <p>
-        Create three wireframes for your site. One for each page and list them here</p>
-
       <h3>Home Page</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home-wireframe.png" alt="home page wireframe" class="wireframe">
 
       <h3>Menu</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/menu-wireframe.png" alt="page 2 wireframe" class="wireframe">
 
       <h3>Cooking Classes</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/classes-wireframe.png" alt="page 3 wireframe" class="wireframe">
     </main>
   </body>
 
