--- a/green-machine/site-plan.html
+++ b/green-machine/site-plan.html
@@ -25,7 +25,7 @@
 
 
       <h3>Audience</h3>
-      <p>We will focus on attracting mostly health conscious individuals, the 'fitness crowd' - as well as those who are wanting to change their life.</p>  <!-- change this -->
+      <p>We will focus on attracting everybody in the community, we aim to bring them together with a common goal of healthy</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
