--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="wwr/index.html">White Water Rafting Website</a>
     <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
     <a href="positioning/positioning.html">Positioning Activity</a>
-    <a href="#">Personal Website</a>
+    <a href="green-machine/index.html">Personal Website</a>
     <a href="green-machine/site-plan.html">Personal Siteplan</a>
     </nav>
     <p>Skye Roberts - WDD130</p>
