updated lorem ipsum

--- a/green-machine/index.html
+++ b/green-machine/index.html
@@ -35,7 +35,7 @@
                 <img src="images/bread.jpg" id="hero-img" alt="Menu Item" class="paralax">
             </div>
             <section id="hero-msg">
-                <h1 class="home-title">lorem ipsum ut quaesequi idebus explature.</h1>
+                <h1 class="home-title">Eat Better, Feel Different</h1>
                 <div class="button-box">
                     <a class="see-menu" href="menu.html">See Our Menu</a>
                 </div>
