--- a/green-machine/contact.html
+++ b/green-machine/contact.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <script src="https://kit.fontawesome.com/3862289525.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div id="content">
         <header>
-            <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="Green Machine Logo"></a>
+            <a id="logo_link" href="index.html"><img class="logo-header" src="images/logo-simple.png" alt="Green Machine Logo"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
@@ -19,13 +20,24 @@
             </nav>
             <div class="social-header">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="images/facebook.png" alt="fb icon" class="facebook">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="images/twitter.png" alt="twitter icon" class="twitter">
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="images/instagram.png" alt="instagram icon" class="instagram">
+                </a>
+            </div>
+            <div class="social-header-green">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook-green.png" alt="fb icon" class="facebook-green">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter-green.png" alt="twitter icon" class="twitter-green">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram-green.png" alt="instagram icon" class="instagram-green">
                 </a>
             </div>
         </header>
@@ -52,50 +64,64 @@
           </form>
         </main>
         <footer>
+            <div class="footer-logo">
+                <img src="images/logo-simple.png" alt="Green Machine Logo" class="logo-footer">
+                <p class="copyright">Green Machine &copy; 2023</p>
+            </div>
             <div class="footer-links">
-                <img src="images/logo-white.png" alt="Green Machine Logo" class="logo">
-                <p><a href="site-plan.html">Site Plan</a></p>
-                <p><a href="contact.html">Contact Us</a></p>
-                <p>Green Machine &copy; 2023</p>
+                <div class="button-box"><a id="site-plan-footer" href="site-plan.html">Site Plan</a></div>
+                <div class="button-box"><a id="contactus-footer" href="contact.html">Contact Us</a></div>
             </div>
             <div class="social-footer">
-                <p class="footer-header">@GreenMachine</p>
+                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a><p class="social" id="facebook">Facebook</p>
+                    <img src="images/facebook.png" alt="fb icon" class="facebook"></a><br>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
-                </a><p class="social" id="twitter">Twitter</p>
+                    <img src="images/twitter.png" alt="twitter icon" class="twitter"></a><br>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a><p class="social" id="instagram">Instagram</p>
+                    <img src="images/instagram.png" alt="instagram icon" class="instagram"> </a><br>
+            </div>
+            <div class="social-footer-green">
+                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook-green.png" alt="fb icon" class="facebook-green"></a><br>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter-green.png" alt="twitter icon" class="twitter-green"></a><br>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram-green.png" alt="instagram icon" class="instagram-green"></a><br>
             </div>
             <div class="hours">
                 <p class="footer-header">Hours</p>
                 <p>Monday: 11am - 4pm</p>
-                <p id="footer-class">(Community cooking class Mondays at 5:30pm, more information <a href="classes.html">here</a>)</p>
+                <p class="footer-class">(Community cooking class Mondays at 5:30pm, more information <a href="classes.html">here</a>)</p>
                 <p>Tuesday - Friday: 9am - 10pm </p>
                 <p>Saturday: 12pm - 10pm</p>
                 <p>Sunday: Closed</p>
             </div>
+
         </footer>
     </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
     <script>
-        // get the feedback div element so we can do something with it.
-        const feedbackElement = document.getElementById('feedback');
-        // get the form so we can read what was entered in it.
-        const formElement = document.forms[0];
-        // add a 'listener' to wait for a submission of our form. When that happens run the code below.
-        formElement.addEventListener('submit', function(e) {
-            // stop the form from doing the default action.
-            e.preventDefault();
-            // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
-            feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'! Thank you for your message. We will get back with you as soon as possible!';
-            // make the feedback element visible.
-            feedbackElement.style.display = "block";
-            // add a class to move everything down so our message doesn't cover it.
-            document.body.classList.toggle('moveDown');
-        });
+        // Get the button:
+        let mybutton = document.getElementById("myBtn");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function() {scrollFunction()};
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+        }
     </script>
 </body>
 </html>
