--- a/green-machine/index.html
+++ b/green-machine/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <script src="https://kit.fontawesome.com/3862289525.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div id="content">
         <header>
-            <a id="logo_link" href="index.html"><img class="logo" src="images/logo.png" alt="Green Machine Logo"></a>
+            <a id="logo_link" href="index.html"><img class="logo-header" src="images/logo-simple.png" alt="Green Machine Logo"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
@@ -19,87 +20,110 @@
             </nav>
             <div class="social-header">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="images/facebook.png" alt="fb icon" class="facebook">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="images/twitter.png" alt="twitter icon" class="twitter">
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="images/instagram.png" alt="instagram icon" class="instagram">
+                </a>
+            </div>
+            <div class="social-header-green">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook-green.png" alt="fb icon" class="facebook-green">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter-green.png" alt="twitter icon" class="twitter-green">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram-green.png" alt="instagram icon" class="instagram-green">
                 </a>
             </div>
         </header>
-        <div id="hero">
-            <!-- make this paralax? -->
-            <div id="hero-box">
-                <img src="images/bread.jpg" id="hero-img" alt="Menu Item" class="paralax">
-            </div>
-            <section id="hero-msg">
-                <h1 class="home-title">Eat Better, Feel Different</h1>
-                <div class="button-box">
-                    <a class="see-menu" href="menu.html">See Our Menu</a>
-                </div>
-            </section>
-        </div>
         <main>
+            <div id="hero">
+                <!-- make this paralax? -->
+                <div id="hero-box">
+                    <img src="images/bread.jpg" id="hero-img" alt="Menu Item" class="paralax">
+                </div>
+                <section id="hero-msg">
+                    <h1 class="home-title-green-machine">Green Machine</h1>
+                    <h1 class="home-title">Eat Better, Feel Different</h1>
+                    <div class="button-box">
+                        <a class="see-menu" href="menu.html">See Our Menu</a>
+                    </div>
+                </section>
+            </div>
             <div id="story-grid">
                 <img src="images/bw-family.jpg" alt="Family Photo" id="img-grid1">
                 <img src="images/cooks.jpg" alt="Images of Cooks in Restaurant" id="img-grid2">
                 <section id="para-grid">
-                    <h2>Our Story</h2>
-                    <p>The Roberts family founded Green Machine in 2023, after being faced with a rarity of healthy food options in their town.  The company’s main purpose is to change lives and communities from the inside out – by feeding soul as well as the body. We strive to connect people to others in their community through group cooking classes and shared seating options, and to connect people to themselves by helping them feel better and more energized through healthy, local food.</p>
-                    <h2>Our Philosophy</h2>
-                    <h3>Sweeten with Fruit</h3>
+                    <h2>Our Story</h2><br>
+                    <p>The Roberts family founded Green Machine in 2023, after being faced with a rarity of healthy food options in their town.  The company’s main purpose is to change lives and communities from the inside out – by feeding soul as well as the body. We strive to connect people to others in their community through group cooking classes and shared seating options, and to connect people to themselves by helping them feel better and more energized through healthy, local food.</p><br>
+                    <h2>Our Philosophy</h2><br>
+                    <p class="h3">Sweeten with Fruit</p>
                     <p class="small">No Refined Sugars</p>
-                    <p>We’ve found that fruits are the perfect alternative to refined sugars. We will always sweeten with fruit first, and occasionally we’ll supplement with natural sweeteners like monk fruit and stevia.</p>
-                    <h3>Focus on the Nutrients</h3>
+                    <p>We’ve found that fruits are the perfect alternative to refined sugars. We will always sweeten with fruit first, and occasionally we’ll supplement with natural sweeteners like monk fruit and stevia.</p><br>
+                    <p class="h3">Focus on the Nutrients</p>
                     <p class="small">No More Calorie Counting</p>
-                    <p>We strive to shift the focus in familiar diets from calorie-counting to nutrient consciousness. Calories are just one attribute of food. Nutrients involve so much more.</p>
-                    <h3>Made From Scratch</h3>
+                    <p>We strive to shift the focus in familiar diets from calorie-counting to nutrient consciousness. Calories are just one attribute of food. Nutrients involve so much more.</p><br>
+                    <p class="h3">Made From Scratch</p>
                     <p class="small">Everyday with Love</p>
                     <p>Everything we serve is made from scratch, with love, everyday. This way, we don’t need to rely on canned food or added preservatives. You know exactly what you’re getting.</p>
                 </section>
             </div>
-            <div id="find-us-background1"></div>
-            <div id="find-us-background2"></div>
-            <section class="text-center">
-                <h2>Find Us</h2>
-                <h3>1960 N State St<br>Orem, UT 84057</h3>
-                <p>---------</p>
-                <h3>Hours of Operation</h3>
-                <p>M | 11:00am - 4:00pm</p>
-                <p>T - F | 9:00am - 10:00pm</p>
-                <p>Sat | 12:00pm - 10:00pm</p>
-                <p>Sun | Closed</p>
-                <div class="button-box">
-                    <a class="get-here" href="https://www.google.com/maps?rlz=1C1ONGR_enUS1003US1003&lqi=CghrbmVhZGVycyIDiAEBSKappZjmgICACFoUEAAYACIIa25lYWRlcnMqBAgCEACSAQRjYWZlmgEkQ2hkRFNVaE5NRzluUzBWSlEwRm5TVVF5ZURoNVRHbDNSUkFCqgEwEAEaHhABIhrDabrYAoYGWvPW-NrQMtzMAwM5gsBmnsQ7ESoMIghrbmVhZGVycygA4AEA&vet=12ahUKEwiZjdCd5rb9AhUtiO4BHQmyBs4Q8UF6BAgDED0..i&lei=HTX9Y9mKCa2Qur8PieSa8Aw&cs=1&um=1&ie=UTF-8&fb=1&gl=us&sa=X&geocode=Kbcheb4ChU2HMet59jD-aiio&daddr=1960+N+State+St,+Orem,+UT+84057" target="_blank">Get Here</a>
+            <section class="find-us">
+                <div id="find-us-background">
+                <section class="find-us-text">
+                    <h2>Find Us</h2>
+                    <h3>1960 N State St<br>Orem, UT 84057</h3>
+                    <p>---------</p>
+                    <h3>801.555.1589</h3>
+                    <p>---------</p>
+                    <h3>Hours of Operation</h3>
+                    <p>M | 11:00am - 4:00pm</p>
+                    <p>T - F | 9:00am - 10:00pm</p>
+                    <p>Sat | 12:00pm - 10:00pm</p>
+                    <p>Sun | Closed</p>
+                </section>
+                    <div class="button-box">
+                        <a class="get-here" id="hour-button" href="https://www.google.com/maps?rlz=1C1ONGR_enUS1003US1003&lqi=CghrbmVhZGVycyIDiAEBSKappZjmgICACFoUEAAYACIIa25lYWRlcnMqBAgCEACSAQRjYWZlmgEkQ2hkRFNVaE5NRzluUzBWSlEwRm5TVVF5ZURoNVRHbDNSUkFCqgEwEAEaHhABIhrDabrYAoYGWvPW-NrQMtzMAwM5gsBmnsQ7ESoMIghrbmVhZGVycygA4AEA&vet=12ahUKEwiZjdCd5rb9AhUtiO4BHQmyBs4Q8UF6BAgDED0..i&lei=HTX9Y9mKCa2Qur8PieSa8Aw&cs=1&um=1&ie=UTF-8&fb=1&gl=us&sa=X&geocode=Kbcheb4ChU2HMet59jD-aiio&daddr=1960+N+State+St,+Orem,+UT+84057" target="_blank">Get Here</a>
+                    </div>
                 </div>
             </section>
-            <img src="images/pesto.jpg"> 
         </main>
         <footer>
+            <div class="footer-logo">
+                <img src="images/logo-simple.png" alt="Green Machine Logo" class="logo-footer">
+                <p class="copyright">Green Machine &copy; 2023</p>
+            </div>
             <div class="footer-links">
-                <img src="images/logo-white.png" alt="Green Machine Logo" class="logo">
-                <p><a href="site-plan.html">Site Plan</a></p>
-                <p><a href="contact.html">Contact Us</a></p>
-                <p>Green Machine &copy; 2023</p>
+                <div class="button-box"><a id="site-plan-footer" href="site-plan.html">Site Plan</a></div>
+                <div class="button-box"><a id="contactus-footer" href="contact.html">Contact Us</a></div>
             </div>
             <div class="social-footer">
-                <p class="footer-header">@GreenMachine</p>
+                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a><p class="social" id="facebook">Facebook</p>
+                    <img src="images/facebook.png" alt="fb icon" class="facebook"></a><br>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
-                </a><p class="social" id="twitter">Twitter</p>
+                    <img src="images/twitter.png" alt="twitter icon" class="twitter"></a><br>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a><p class="social" id="instagram">Instagram</p>
+                    <img src="images/instagram.png" alt="instagram icon" class="instagram"> </a><br>
+            </div>
+            <div class="social-footer-green">
+                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook-green.png" alt="fb icon" class="facebook-green"></a><br>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter-green.png" alt="twitter icon" class="twitter-green"></a><br>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram-green.png" alt="instagram icon" class="instagram-green"></a><br>
             </div>
             <div class="hours">
                 <p class="footer-header">Hours</p>
                 <p>Monday: 11am - 4pm</p>
-                <p id="footer-class">(Community cooking class Mondays at 5:30pm, more information <a href="classes.html">here</a>)</p>
+                <p class="footer-class">(Community cooking class Mondays at 5:30pm, more information <a href="classes.html">here</a>)</p>
                 <p>Tuesday - Friday: 9am - 10pm </p>
                 <p>Saturday: 12pm - 10pm</p>
                 <p>Sunday: Closed</p>
@@ -107,5 +131,27 @@
 
         </footer>
     </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+    <script>
+        // Get the button:
+        let mybutton = document.getElementById("myBtn");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function() {scrollFunction()};
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+        }
+    </script>
 </body>
 </html>
