--- a/green-machine/index.html
+++ b/green-machine/index.html
@@ -73,7 +73,7 @@
                     <p>Everything we serve is made from scratch, with love, everyday. This way, we don’t need to rely on canned food or added preservatives. You know exactly what you’re getting.</p>
                 </section>
             </div>
-            <section class="find-us">
+            <div class="find-us">
                 <div id="find-us-background">
                 <section class="find-us-text">
                     <h2>Find Us</h2>
@@ -91,7 +91,7 @@
                         <a class="get-here" id="hour-button" href="https://www.google.com/maps?rlz=1C1ONGR_enUS1003US1003&lqi=CghrbmVhZGVycyIDiAEBSKappZjmgICACFoUEAAYACIIa25lYWRlcnMqBAgCEACSAQRjYWZlmgEkQ2hkRFNVaE5NRzluUzBWSlEwRm5TVVF5ZURoNVRHbDNSUkFCqgEwEAEaHhABIhrDabrYAoYGWvPW-NrQMtzMAwM5gsBmnsQ7ESoMIghrbmVhZGVycygA4AEA&vet=12ahUKEwiZjdCd5rb9AhUtiO4BHQmyBs4Q8UF6BAgDED0..i&lei=HTX9Y9mKCa2Qur8PieSa8Aw&cs=1&um=1&ie=UTF-8&fb=1&gl=us&sa=X&geocode=Kbcheb4ChU2HMet59jD-aiio&daddr=1960+N+State+St,+Orem,+UT+84057" target="_blank">Get Here</a>
                     </div>
                 </div>
-            </section>
+            </div>
         </main>
         <footer>
             <div class="footer-logo">
@@ -103,7 +103,7 @@
                 <div class="button-box"><a id="contactus-footer" href="contact.html">Contact Us</a></div>
             </div>
             <div class="social-footer">
-                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
+                <p class="footer-header sm-greenmachine">@GreenMachine</p>
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon" class="facebook"></a><br>
                 <a href="https://twitter.com" target="_blank">
@@ -112,7 +112,7 @@
                     <img src="images/instagram.png" alt="instagram icon" class="instagram"> </a><br>
             </div>
             <div class="social-footer-green">
-                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
+                <p class="footer-header sm-greenmachine">@GreenMachine</p>
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook-green.png" alt="fb icon" class="facebook-green"></a><br>
                 <a href="https://twitter.com" target="_blank">
