added hover effect

--- a/green-machine/classes.html
+++ b/green-machine/classes.html
@@ -54,26 +54,49 @@
             </section>
         </div>
         <main>
-            <div>
-                <h2>Brunches & Beyond</h2>
-                <p>o What: Learn the art of the perfect brunch – learn simple, healthy breakfast and lunch recipes that will always impress a crowd.<br>o When: 1st Saturday 9:30 am<br>o Cost: $30 per person (includes all ingredients)</p>
+            <div class="container">
+                <img src="images/family.jpg" class="image">
+                <div class="overlay">
+                    <div class="text">
+                        <h2>Brunches & Beyond</h2><br>
+                        <p>o What: Learn the art of the perfect brunch – learn simple, healthy breakfast and lunch recipes that will always impress a crowd.</p><br>
+                        <p>o When: 1st Saturday 9:30 am</p><br>
+                        <p>o Cost: $30 per person (includes all ingredients)</p>
+                    </div>
+                </div>
             </div>
-            <img src="images/family.jpg" class="paralax">
-            <div>
-                <h2>(Double) Date Night</h2>
-                <p>o What: Reserve ahead of time, room for 4 guests only. Experience cooking in a restaurant kitchen, learn how the chefs are making the special dish for that night’s menu, and prepare your own meal alongside them.<br>o When: 2nd and 4th Friday 6pm<br>o Cost: $75 per person (includes all ingredients)</p>
+            <div class="container">
+                <img src="images/date-night.jpg" class="image">
+                <div class="overlay">
+                    <div class="text">
+                        <h2>(Double) Date Night</h2><br>
+                        <p>o What: Reserve ahead of time, room for 4 guests only. Experience cooking in a restaurant kitchen, learn how the chefs are making the special dish for that night’s menu, and prepare your own meal alongside them.</p><br>
+                        <p>o When: 2nd and 4th Friday 6pm</p><br>
+                        <p>o Cost: $75 per person (includes all ingredients)</p>
+                    </div>
+                </div>
             </div>
-            <img src="images/date-night.jpg" class="paralax">
-            <div>
-                <h2>Community Cooking</h2>
-                <p>o What: Learn budget-friendly recipes that you can size up to feed any amount of people. Walk-in’s welcome, we aim to gather the whole community!<br>o When: Monday 5:30pm<br>o Cost: $15/adult $10/child (includes all ingredients)</p>
+            <div class="container">
+                <img src="images/community.jpg" class="image">
+                <div class="overlay">
+                    <div class="text">
+                        <h2>Community Cooking</h2><br>
+                        <p>o What: Learn budget-friendly recipes that you can size up to feed any amount of people. Walk-in’s welcome, we aim to gather the whole community!</p><br>
+                        <p>o When: Monday 5:30pm</p>
+                        <p>o Cost: $15/adult $10/child (includes all ingredients)</p><br>
+                    </div>
+                </div>
             </div>
-            <img src="images/community.jpg" class="paralax">
-            <div>
-                <h2>Private Lessons</h2>
-                <p>o What: Want to prepare a special dinner for someone, uncomfortable in group settings, or have specific cooking skills/recipes you want to learn? Contact us to set up private cooking lessons!<br>o Cost: $35/hr, ingredient pricing varies depending on chosen recipes.</p>
+            <div class="container">
+                <img src="images/private-lesson.jpg" class="image">
+                <div class="overlay">
+                    <div class="text">
+                        <h2>Private Lessons</h2><br>
+                        <p>o What: Want to prepare a special dinner for someone, uncomfortable in group settings, or have specific cooking skills/recipes you want to learn? Contact us to set up private cooking lessons!</p><br>
+                        <p>o Cost: $35/hr, ingredient pricing varies depending on chosen recipes.</p>
+                    </div>
+                </div>
             </div>
-            <img src="images/private-lesson.jpg" class="paralax">
             <div class="background-camp"></div>
             <div class="background-camp-white"></div>
             <h2>Kid's Summer Camps</h2>
