--- a/green-machine/menu.html
+++ b/green-machine/menu.html
@@ -42,7 +42,7 @@
             </div>
         </header>
         <main id="menu-main">
-            <img src="images/waffle.jpg" id="hero-img">
+            <img src="images/waffle.jpg" id="hero-img" alt="Image of waffles">
             <h1 id="menu-title">MENU</h1>
             <section class="menu">
                 <div class="tab">
@@ -198,61 +198,61 @@
             </section>
             <div class="picture-border">
                 <div class="container1">
-                    <img src="images/pancake.jpg" class="image1">
+                    <img src="images/pancake.jpg" class="image1" alt="Image of Banana Nut Pancakes">
                     <div class="middle1">
                         <div class="text1">Banana Nut Pancakes</div>
                     </div>
                 </div>
                 <div class="container1">
-                    <img src="images/turkey.jpg" class="image1">
+                    <img src="images/turkey.jpg" class="image1" alt="Image of BLT Panini">
                     <div class="middle1">
                         <div class="text1">BLT Panini</div>
                     </div>
                 </div>
                 <div class="container1">
-                    <img src="images/benedict-burger.jpg" class="image1">
+                    <img src="images/benedict-burger.jpg" class="image1" alt="Image of Benedict Burger">
                     <div class="middle1">
                         <div class="text1">Benedict Burger</div>
                     </div>
                 </div>
                 <div class="container1">
-                    <img src="images/pizza.jpg" class="image1">
+                    <img src="images/pizza.jpg" class="image1" alt="Image of BBQ Chicken Pizza">
                     <div class="middle1">
                         <div class="text1">BBQ Chicken Pizza</div>
                     </div>
                 </div>
                 <div class="container1">
-                    <img src="images/ravioli.jpg" class="image1">
+                    <img src="images/ravioli.jpg" class="image1" alt="Image of Seafood Ravioli">
                     <div class="middle1">
                         <div class="text1">Seafood Ravioli</div>
                     </div>
                 </div>
                 <div class="container1">
-                    <img src="images/soup.jpg" class="image1">
+                    <img src="images/soup.jpg" class="image1" alt="Image of Creamy Tomato Soup">
                     <div class="middle1">
                         <div class="text1">Creamy Tomato Soup</div>
                     </div>
                 </div>
                 <div class="container1">
-                    <img src="images/salad.jpg" class="image1">
+                    <img src="images/salad.jpg" class="image1" alt="Image of Large Green Avocado Salad">
                     <div class="middle1">
                         <div class="text1">Large Green Avocado Salad</div>
                     </div>
                 </div>
                 <div class="container1">
-                    <img src="images/cake.jpg" class="image1">
+                    <img src="images/cake.jpg" class="image1" alt="Image of Gluten-free Raspberry Almond Cake">
                     <div class="middle1">
                         <div class="text1">Gluten-free Raspberry Almond Cake</div>
                     </div>
                 </div>
                 <div class="container1">
-                    <img src="images/calamari.jpg" class="image1">
+                    <img src="images/calamari.jpg" class="image1" alt="Image of Calamari Fritti">
                     <div class="middle1">
                         <div class="text1">Calamari Fritti</div>
                     </div>
                 </div>
                 <div class="container1">
-                    <img src="images/lemonade.jpg" class="image1">
+                    <img src="images/lemonade.jpg" class="image1" alt="Image of Fresh Lemonade">
                     <div class="middle1">
                         <div class="text1">Fresh Lemonade</div>
                     </div>
@@ -263,7 +263,7 @@
                     <h2>Our inspiration</h2><br>
                     <p>Beyond serving delicious and healthy food, our main purpose is to change lives from the inside out. This purpose is reflected by an evergreen menu featuring flavors from around the world, made with only <br>whole ingredients—unprocessed and unrefined—to help everyone eat better, feel different.</p>
                 </div>
-                <img src="images/garden.jpg" id="garden-img">
+                <img src="images/garden.jpg" id="garden-img" alt="Image of a man gardening">
             </div>
         </main>
         <footer>
@@ -276,7 +276,7 @@
                 <div class="button-box"><a id="contactus-footer" href="contact.html">Contact Us</a></div>
             </div>
             <div class="social-footer">
-                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
+                <p class="footer-header sm-greenmachine">@GreenMachine</p>
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon" class="facebook"></a><br>
                 <a href="https://twitter.com" target="_blank">
@@ -285,7 +285,7 @@
                     <img src="images/instagram.png" alt="instagram icon" class="instagram"> </a><br>
             </div>
             <div class="social-footer-green">
-                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
+                <p class="footer-header sm-greenmachine">@GreenMachine</p>
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook-green.png" alt="fb icon" class="facebook-green"></a><br>
                 <a href="https://twitter.com" target="_blank">
