--- a/green-machine/site-plan.html
+++ b/green-machine/site-plan.html
@@ -87,9 +87,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Menu</a>
-        <a href="#">Cooking Classes</a>
+        <a href="index.html">Home</a>
+        <a href="menu.html">Menu</a>
+        <a href="classes.html">Cooking Classes</a>
       </nav>
       <hr>
       <h2>
@@ -142,6 +142,8 @@
       <p>Images for the Home page </p>
         <img src="images/bread.jpg" alt="image for homepage" class="photo">
         <img src="images/bw-family.jpg" alt="image for homepage" class="photo">
+        <img src="images/cooks.jpg" alt="image for homepage" class="photo">
+        <img src="images/building.jpg" alt="image for homepage" class="photo">
 
       </ul>
       <h3>Menu</h3>
@@ -162,8 +164,18 @@
       <br><br>Etc...
       </p>
       <p>Images for Page 2 (Menu)</p>
-        <img src="images/smoothie.jpg" alt="image for page" class="photo">
-        <img src="images/bowl.jpg" alt="image for page" class="photo">
+        <img src="images/waffle.jpg" alt="image for page" class="photo">
+        <img src="images/pancake.jpg" alt="image for page" class="photo">
+        <img src="images/turkey.jpg" alt="image for page" class="photo">
+        <img src="images/benedict-burger.jpg" alt="image for page" class="photo">
+        <img src="images/pizza.jpg" alt="image for page" class="photo">
+        <img src="images/ravioli.jpg" alt="image for page" class="photo">
+        <img src="images/soup.jpg" alt="image for page" class="photo">
+        <img src="images/salad.jpg" alt="image for page" class="photo">
+        <img src="images/cake.jpg" alt="image for page" class="photo">
+        <img src="images/calamari.jpg" alt="image for page" class="photo">
+        <img src="images/lemonade.jpg" alt="image for page" class="photo">
+        <img src="images/garden.jpg" alt="image for page" class="photo">
 
       </ul>
       <h3>Cooking Classes</h3>
@@ -188,8 +200,11 @@
 
       </p>
       <p>Images for Page 3 (Cooking Classes)</p>
-        <img src="images/pizza.jpg" alt="image for page3" class="photo">
+        <img src="images/meal.jpg" alt="image for page3" class="photo">
         <img src="images/family.jpg" alt="image for page3" class="photo">
+        <img src="images/date-night.jpg" alt="image for page3" class="photo">
+        <img src="images/community.jpg" alt="image for page3" class="photo">
+        <img src="images/private-lesson.jpg" alt="image for page3" class="photo">
       </ul>
       <hr>
       <h2>
