updated site plan

--- a/green-machine/site-plan.html
+++ b/green-machine/site-plan.html
@@ -45,13 +45,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/283618-143601-1a4301-6a994e-aad576-f7ffed-f2e8cf-dda15e-bc6c25-bc4749" target="_blank">https://coolors.co/283618-143601-1a4301-6a994e-aad576-f7ffed-f2e8cf-dda15e-bc6c25-bc4749</a>
+      Palette URL: <a href="https://coolors.co/2a2e30-5c8660-c5742b-f1f1f1" target="_blank">My Coolors Color Palette</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary"><span>#F7FFED</span></td><td class="secondary"><span>#1A4301</span></td><td class="accent1"><span>#DDA15E</span></td><td class="accent2"><span>#BC4749</span></td></tr>
+        <tr><td class="primary"><span>#2A2E30</span></td><td class="secondary"><span>#5c8660</span></td><td class="accent1"><span>#c5742b</span></td><td class="accent2"><span>#f1f1f1</span></td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -140,10 +140,12 @@
 
       </p>
       <p>Images for the Home page </p>
+      <div id="site-images">
         <img src="images/bread.jpg" alt="image for homepage" class="photo">
         <img src="images/bw-family.jpg" alt="image for homepage" class="photo">
         <img src="images/cooks.jpg" alt="image for homepage" class="photo">
         <img src="images/building.jpg" alt="image for homepage" class="photo">
+        </div>
 
       </ul>
       <h3>Menu</h3>
@@ -164,7 +166,7 @@
       <br><br>Etc...
       </p>
       <p>Images for Page 2 (Menu)</p>
-        <img src="images/waffle.jpg" alt="image for page" class="photo">
+      <div id="site-images">
         <img src="images/pancake.jpg" alt="image for page" class="photo">
         <img src="images/turkey.jpg" alt="image for page" class="photo">
         <img src="images/benedict-burger.jpg" alt="image for page" class="photo">
@@ -175,8 +177,9 @@
         <img src="images/cake.jpg" alt="image for page" class="photo">
         <img src="images/calamari.jpg" alt="image for page" class="photo">
         <img src="images/lemonade.jpg" alt="image for page" class="photo">
-        <img src="images/garden.jpg" alt="image for page" class="photo">
-
+      </div>
+      <img src="images/garden.jpg" alt="image for page" class="photo">
+      <img src="images/waffle.jpg" alt="image for page" class="photo" id="waffle">
       </ul>
       <h3>Cooking Classes</h3>
       <p>We believe that good food and good conversations heal the soul, which is why we began our cooking classes. These classes provide an opportunity for the community to spend time learning and growing together, to meet their neighbors and bring their families with them. Come hungry, we always eat what we make as a group.
@@ -200,11 +203,13 @@
 
       </p>
       <p>Images for Page 3 (Cooking Classes)</p>
+      <div id="site-images">
         <img src="images/meal.jpg" alt="image for page3" class="photo">
         <img src="images/family.jpg" alt="image for page3" class="photo">
         <img src="images/date-night.jpg" alt="image for page3" class="photo">
         <img src="images/community.jpg" alt="image for page3" class="photo">
         <img src="images/private-lesson.jpg" alt="image for page3" class="photo">
+      </div>
       </ul>
       <hr>
       <h2>
