updated all pages

--- a/green-machine/classes.html
+++ b/green-machine/classes.html
@@ -41,21 +41,17 @@
                 </a>
             </div>
         </header>
-        <div id="hero">
-            <!-- make this paralax? -->
-            <div id="hero-box">
-                <img src="images/meal.jpg" id="hero-img" alt="Group eating a meal" class="paralax">
-            </div>
+        <div id="hero" class="image2">
             <section id="hero-msg">
-                <h1 class="home-title">Cooking Classes</h1>
+                <h1 class="classes-title">COOKING CLASSES</h1>
                 <div class="button-box">
                     <a class="get-here" href="https://www.google.com/maps?rlz=1C1ONGR_enUS1003US1003&lqi=CghrbmVhZGVycyIDiAEBSKappZjmgICACFoUEAAYACIIa25lYWRlcnMqBAgCEACSAQRjYWZlmgEkQ2hkRFNVaE5NRzluUzBWSlEwRm5TVVF5ZURoNVRHbDNSUkFCqgEwEAEaHhABIhrDabrYAoYGWvPW-NrQMtzMAwM5gsBmnsQ7ESoMIghrbmVhZGVycygA4AEA&vet=12ahUKEwiZjdCd5rb9AhUtiO4BHQmyBs4Q8UF6BAgDED0..i&lei=HTX9Y9mKCa2Qur8PieSa8Aw&cs=1&um=1&ie=UTF-8&fb=1&gl=us&sa=X&geocode=Kbcheb4ChU2HMet59jD-aiio&daddr=1960+N+State+St,+Orem,+UT+84057" target="_blank">Directions</a>
                 </div>
             </section>
         </div>
-        <main>
+        <main id="classes-main">
             <div class="container">
-                <img src="images/family.jpg" class="image">
+                <img src="images/family.jpg" class="image" alt="Image of family cooking">
                 <div class="overlay">
                     <div class="text">
                         <h2>Brunches & Beyond</h2><br>
@@ -66,7 +62,7 @@
                 </div>
             </div>
             <div class="container">
-                <img src="images/date-night.jpg" class="image">
+                <img src="images/date-night.jpg" class="image" alt="image of a cook by a restaurant stove">
                 <div class="overlay">
                     <div class="text">
                         <h2>(Double) Date Night</h2><br>
@@ -76,8 +72,15 @@
                     </div>
                 </div>
             </div>
+            <div class="background-camp">
+                <h2>Kid's Summer Camps</h2>
+                <p>We run a series of summer camps for ages 7-17, contact us for the specific details!</p>
+                <div class="button-box">
+                    <a class="contactus" href="contact.html">Contact Us</a>
+                </div>
+            </div>
             <div class="container">
-                <img src="images/community.jpg" class="image">
+                <img src="images/community.jpg" class="image" alt="image of people eating at long table">
                 <div class="overlay">
                     <div class="text">
                         <h2>Community Cooking</h2><br>
@@ -88,7 +91,7 @@
                 </div>
             </div>
             <div class="container">
-                <img src="images/private-lesson.jpg" class="image">
+                <img src="images/private-lesson.jpg" class="image" alt="image of a private cooking class">
                 <div class="overlay">
                     <div class="text">
                         <h2>Private Lessons</h2><br>
@@ -97,13 +100,7 @@
                     </div>
                 </div>
             </div>
-            <div class="background-camp"></div>
-            <div class="background-camp-white"></div>
-            <h2>Kid's Summer Camps</h2>
-            <p>We run a series of summer camps for ages 7-17, contact us for the specific details!</p>
-            <div class="button-box">
-                <a class="contactus" href="contact.html">Contact Us</a>
-            </div>
+            
         </main>
         <footer>
             <div class="footer-logo">
@@ -115,7 +112,7 @@
                 <div class="button-box"><a id="contactus-footer" href="contact.html">Contact Us</a></div>
             </div>
             <div class="social-footer">
-                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
+                <p class="footer-header sm-greenmachine">@GreenMachine</p>
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon" class="facebook"></a><br>
                 <a href="https://twitter.com" target="_blank">
@@ -124,7 +121,7 @@
                     <img src="images/instagram.png" alt="instagram icon" class="instagram"> </a><br>
             </div>
             <div class="social-footer-green">
-                <p class="footer-header" class="sm-greenmachine">@GreenMachine</p>
+                <p class="footer-header sm-greenmachine">@GreenMachine</p>
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook-green.png" alt="fb icon" class="facebook-green"></a><br>
                 <a href="https://twitter.com" target="_blank">
