--- a/green-machine/site-plan.html
+++ b/green-machine/site-plan.html
@@ -204,7 +204,7 @@
       </p>
       <p>Images for Page 3 (Cooking Classes)</p>
       <div id="site-images">
-        <img src="images/meal.jpg" alt="image for page3" class="photo">
+        <img src="images/oranges.jpg" alt="image for page3" class="photo">
         <img src="images/family.jpg" alt="image for page3" class="photo">
         <img src="images/date-night.jpg" alt="image for page3" class="photo">
         <img src="images/community.jpg" alt="image for page3" class="photo">
