--- a/green-machine/site-plan.html
+++ b/green-machine/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/logo.png" alt="Logo image" id="logo">
+      <img src="images/logo-simple.png" alt="Logo image" id="logo">
       <hr>
       <h2>
         Style Guide
@@ -216,13 +216,13 @@
         Wireframes
       </h2>
       <h3>Home Page</h3>
-      <img src="images/home-wireframe.png" alt="home page wireframe" class="wireframe">
+      <img src="images/1.png" alt="home page wireframe" class="wireframe">
 
       <h3>Menu</h3>
-      <img src="images/menu-wireframe.png" alt="page 2 wireframe" class="wireframe">
+      <img src="images/2.png" alt="page 2 wireframe" class="wireframe">
 
       <h3>Cooking Classes</h3>
-      <img src="images/classes-wireframe.png" alt="page 3 wireframe" class="wireframe">
+      <img src="images/3.png" alt="page 3 wireframe" class="wireframe">
     </main>
   </body>
 
